# FlexFlow

./: CMakeLists.txt
cmake/: protobuf.cmake
examples/AlexNet/: CMakeLists.txt
examples/AlexNet_newapi/: CMakeLists.txt
examples/DLRM/: CMakeLists.txt  dlrm.cc  dlrm.h  preprocess_hdf.py
examples/InceptionV3/: CMakeLists.txt
src/ops/: batch_norm.cu  concat.cu  conv_2d.cu  element_binary.cu  element_unary.cu  embedding.cu  flat.cu  linear.cu  mse_loss.cu  pool_2d.cu  softmax.cu
src/runtime/: model.cc
